---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 17/1/26
  Bugfixes:
    - Fixed migrations from saves all the way back from 0.4.2 to 1.5.x.
    - Removed the text with missing localization in the item buffs GUI.
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 17/1/26
  Major Features:
    - Added mod setting for controlling the efficiency of trades (which is the average ratio of the trade's total output-to-input value).
  Features:
    - Added mod setting for controlling the hex claim costs, intended to be lowered when lowering the trade efficiency setting to the point where infinite loops are impossible.
    - Added a fifth coin tier, black hole coins.
    - Added a GUI for viewing and managing the total array of item buffs you have unlocked.
  Minor Features:
    - Added more item buffs: rocket turret, rocket launcher, raw fish.
  Changes:
    - Item counts in trades no longer exceed 100 or five total stacks (whichever is smaller).
    - Item counts in trades are now more varied, where lower-valued items are generally in higher quantities than the higher-valued items on the same side of the trade.
    - Added 10x construction robots, 1x personal roboport, and 2x personal batteries to the quest reward that gives early bots + modular armor.
    - Changed the "(NEGATIVE PRODUCTIVITY)" flying text from trades to [img=virtual-signal.signal-deny].
  Balancing:
    - Changed the effects of "All Buffs Level" and "All Buffs Cost Reduced" item buffs to scale linearly instead of exponential.
    - Lowered the default setting value for frequency of copper ore from 4.5 to 4.0, giving slightly more iron ore, coal, and stone in mixed patches but slightly less copper ore.
    - Lowered the default setting value for number of trades per hex core on Aquilo from 6 to 2.
  Graphics: