@@ -4,6 +4,7 @@ Date: 17/1/26
   Bugfixes:
     - Fixed migrations from saves all the way back from 0.4.2 to 1.5.x.
     - Removed the text with missing localization in the item buffs GUI.
+    - Fixed that repeatedly toggling "All Buffs Level" item buffs was repeatedly adding all other effects instead of adding and removing them.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 17/1/26
